# Chip-8-Emulator-C-

./: CMakeLists.txt
.cache/clangd/index/: Chip8.cpp.D8C55E45EB2649BF.idx  Chip8.h.B2B1547D11D487A5.idx  Chip8_Display.cpp.82F7C5985A22D0CB.idx  Chip8_Display.h.4279BB71FE5E97F8.idx  constants.h.F012F4EC44FB4785.idx  main.cpp.AF5089C51ED54884.idx
Debug/: CMakeCache.txt  Makefile  chip-8  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: codemodel-v2-34c04b5d6e608b9fa922.json  index-2023-01-19T06-54-40-0912.json  target-chip-8-Debug-b16cc7e1cd969d048984.json
include/: Chip8.h  Chip8_Display.h  constants.h
roms/: known_test.ch8
src/: Chip8.cpp  Chip8_Display.cpp  main.cpp
